# AI_DSCUBED_Week2_Project1

./: .env.example  .env_template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  llmgine codebase copy paste.txt  mkdocs.yml  notion_users.json  pyproject.toml  requirements.txt  run_function_chat.sh  sample_logs.json  setup-dev.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
backlog/: config.yml
backlog/tasks/: task-1 - Render-markdown-as-kanban.md
docs/: architecture.md  implementation_notes.md  index.md  inspiration.md  modules.md  vision.md
docs/architecture/: event_driven.md  observability.md
engines/: engine_guide.md  notion_crud_engine.py  notion_engine.py  single_pass_engine.py  tool_chat_engine.py  tool_engine.py  voice_processing_engine.py
examples/: bus_example.py  observability_example.py  trace.py
gcloud/gmail/: 1_setup.sh  2_setup_output.txt  3_gmail_demo_sub_pub.py  goal.txt  tutorial.txt
programs/: chatbot.py  cli_agent.py  cli_chat.py  cli_chat_terminal.py  cli_full.py  dummie_program.py  example.py  function_caller.py  function_chat.py  function_engine_session.py  function_studio.py  log-viewer.py  log_streamer.py  playground.py  session_bus_demo.py  streamlit_chat_app.py  test.py  tracer.py
programs/Audio2Text/: README.md  functions.py  transcribe.py
programs/cli/: chat_history.json  cli.py  events.py
programs/discord/: components.py  darcy.py  session_manager.py
programs/engines/: README_your_engine.md  engine_guide.md  single_pass_engine.py  tool_chat_engine.py  voice_processing_engine.py  yourengine.py  yourengine2.py
programs/function_studio/: function_studio.py
programs/function_studio/tests/: notion_query_database.json
programs/gcloud/gmail/: 2_setup_output.txt  notes.txt  tutorial.txt
programs/llmgen_legacy/: chat.py  commands.py  main.py  observer.py
programs/observability-cli/: README.md  log_parser.py  log_search.py  log_stats.py  log_viewer.py  logcli.py  traceviz.py
programs/observability-gui/: README.md  WSL2_INSTRUCTIONS.md  dev-server.js  index.html  inspiration.md  llmgine_20250323_165236.jsonl  package-lock.json  package.json  server.js  start.sh  vite.config.ts
programs/observability-gui/src/: App.tsx
programs/performance/: timed_test.py
programs/stt/: __init__.py
programs/tools/: function_studio.py  function_studio_ll.py  function_studio_v2.py  test_function_studio.py  tools_for_test.py
programs/workflow_studio/: workflow_studio.py
prompts/: dummy_prompt.md  hello_world.json  hello_world_made.json  hello_world_prompt.json
prompts/core/agents/: function_maker.md  system.md
prompts/notion/: filter.md  notion_system.md  temp.md
scripts/: compress.py  compress_paste.py  cost.py  dev.py
src/: exceptions.py
src/cli/: cli.py
src/clients/: anthropic_client.py  openai_client.py  response.py
src/core/: agent.py  engine.py  store.py
src/framework/: exceptions.py  setup.py
src/framework/chat/: chat.py  cli.py  commands.py
src/framework/clients/: __init__.py  anthropic_client.py  model_manager.py  model_registry.py  openai_client.py  openrouter_client.py  response.py
src/framework/core/: agent.py  chatroom.py  engine.py  observer.py  store.py  stream_manager.py  streaming.py  workflow.py
src/framework/tool_calling/: __init__.py  tool_calling.py
src/framework/types/: block.py  callbacks.py  client_interface.py  clients.py  engine.py  engine_types.py  events.py  model_config.py  model_register.py  models.py  openrouter_providers.py  utils.py
src/framework/utils/: __init__.py  callbacks.py  client_model_lookup.py  local_test.py  logging_config.py  runtime.py
src/framework/workflow/: blocks.py  workflow.py
src/interfaces/abstract/: __init__.py  abstract_interface.py
src/interfaces/cli/: __init__.py  chat.py  cli.py  observer.py  test_cli.py
src/llmgine/: __init__.py  bootstrap.py
src/llmgine/bus/: README.md  __init__.py  bus.py  empty.py  fakes.py  observability.py  session.py  unfinished_events.jsonl  utils.py
src/llmgine/database/: database.py
src/llmgine/llm/: __init__.py
src/llmgine/messages/: __init__.py  approvals.py  commands.py  events.py  scheduled_events.py
src/llmgine/notion/: data.py  functions.py  notion.py
src/llmgine/observability/: __init__.py  bus.py  events.py
src/programs/: chatbot.py  cli_agent.py  cli_chat.py  cli_chat_terminal.py  cli_full.py  function_chat.py  function_test.py  log_streamer.py  router.py  streamlit_chat_app.py  test.py
src/prompts/: prompts.py
src/tool_calling/: tool_calling.py
src/tools/: calculator.py  core.py  notion.py  terminal.py
src/types/: callbacks.py  model_config.py
src/utils/: callbacks.py  local_test.py  logfire_config.py
tests/: basic_chat_context_engine_test.py  basic_context_engine_test.py  basic_context_store_test.py  chat_test.py  client_creation_test.py  client_response_test.py  comprehensive_tool_calling_test.py  conftest.py  context_store_test.py  llm_manager_tests.py  model_client_test.py  promptoolkitdemo.py  response_test.py  scrap.py  scrap3.py  scrap_streaming.py  test.py  test_bootstrap.py  test_bus_session.py  test_cli_interface.py  test_event_logger.py  test_foo.py  test_llm_engine.py  test_message_bus.py  test_tool_manager.py  testing.ipynb  testing_utils.py  tool_calling_test.py  tool_engine_test.py
tests/benchmarks/: client_performance.py  client_performance_results.txt
tests/bus/: test_approval_commands.py  test_bus.py  test_scheduled_events.py
tests/test_responses_objects/: _maker.py  anthropic_response_generic.json  openai_response.json  openai_response_generic.json  openai_response_tool_call.json
tests/tools/: test_calculator.py  test_file_ops.py  test_tool_manager.py  test_tool_register.py  test_tools.py  test_weather.py  tools_for_test.py
tools/: __init__.py  calculator.py  core.py  notion.py  notion_abstract.py  pwsh.py  test.py  test_tools.py
tools/core/: terminal.py
tools_gallery/: test_tools.py
(+105 files in other folders)
